--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ exclude = .eggs,.tox
 ignore = D203, D210, D212, D301, D413
 match = (?!conftest)(?!setup).*\.py
 match_dir = (?!.tox)(?!vendor)(?!tests)[^\.].*
+
+[tool:pytest]
+addopts = --doctest-modules --cov=src --timeout=60 --numprocesses=4
